add basic css to display a card in center of page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <title>Card Array Test</title>
 </head>
 <body>
+    <div id="game-area">
+        <div id="card-area">
+            <br>
+            <br>
+            <img src="assets/images/Test_Img1.png" alt="" srcset="">
+            <br>
+            <br>
+            <br>
+            <ul class="myUL">
+                <li>field 1</li>
+                <li>field 1</li>
+                <li>field 1</li>
+                <li>field 1</li>
+            </ul>
+        </div>
+    </div>
     
     <script src="assets/javascript/script.js"></script>
 </body>
