base code to allow text of card change

--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 <body>
     <div id="game-area">
         <div id="card-area">
+            <h1 id="name">Title</h1>
             <br>
             <br>
-            <img src="assets/images/Test_Img1.png" alt="" srcset="">
+            <img src="assets/images/Test_Img1.png" alt="" srcset="" id="image">
             <br>
             <br>
             <br>
             <ul class="myUL">
-                <li>field 1</li>
-                <li>field 1</li>
-                <li>field 1</li>
-                <li>field 1</li>
+                <li id="kpower">field 1</li>
+                <li id="ffactor">field 1</li>
+                <li id="hrating">field 1</li>
+                <li id="pstrength">field 1</li>
             </ul>
+        </div>
+        <div id="btndiv">
+            <button type="button" id="next-card">New card</button>
         </div>
     </div>
     
