--- a/index.html
+++ b/index.html
@@ -10,23 +10,38 @@
 </head>
 <body>
     <div id="game-area">
-        <div id="card-area">
-            <h1 id="name">Title</h1>
+        <div id="card-area1">
+            <h1 id="name1">Title</h1>
             <br>
             <br>
-            <img src="assets/images/Test_Img1.png" alt="" srcset="" id="image">
+            <img src="assets/images/Test_Img1.png" alt="" srcset="" id="image1">
             <br>
             <br>
             <br>
             <ul class="myUL">
-                <li id="kpower">field 1</li>
-                <li id="ffactor">field 1</li>
-                <li id="hrating">field 1</li>
-                <li id="pstrength">field 1</li>
+                <li id="kpower1">field 1</li>
+                <li id="ffactor1">field 1</li>
+                <li id="hrating1">field 1</li>
+                <li id="pstrength1">field 1</li>
+            </ul>
+        </div>
+        <div id="card-area2">
+            <h1 id="name2">Title</h1>
+            <br>
+            <br>
+            <img src="assets/images/Test_Img1.png" alt="" srcset="" id="image2">
+            <br>
+            <br>
+            <br>
+            <ul class="myUL">
+                <li id="kpower2">field 1</li>
+                <li id="ffactor2">field 1</li>
+                <li id="hrating2">field 1</li>
+                <li id="pstrength2">field 1</li>
             </ul>
         </div>
         <div id="btndiv">
-            <button type="button" id="next-card">New card</button>
+            <button type="button" id="next-game">Next Game</button>
         </div>
     </div>
     
