code for scores and all fields added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <title>Card Array Test</title>
 </head>
 <body>
-    <div id="game-area">
+    <span id="score-area">
+        <div id="player-score">
+            <p>Player score</p>
+            <p id="pscore">0</p>
+        </div>
+        <div id="computer-score">
+            <p>Computer score</p>
+            <p id="cscore">0</p>
+        </div>
+    </span>
+    <div id="game-area">    
         <div id="card-area1">
             <h1 id="name1">Title</h1>
             <br>
