add code to hide computer fields

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <h1 id="name2">Title</h1>
             <br>
             <br>
-            <img src="assets/images/Test_Img1.png" alt="" srcset="" id="image2">
+            <img src="assets/images/Test_Img1.png" alt="" srcset="">
             <br>
             <br>
             <br>
-            <ul class="myUL">
+            <ul class="myUL" id="computer-list">
                 <li id="kpower2">field 1</li>
                 <li id="ffactor2">field 1</li>
                 <li id="hrating2">field 1</li>
