add delay for listeners

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Card Array Test</title>
 </head>
 <body>
+    <div id="message-area"></div>
     <span id="score-area">
         <div id="player-score">
             <p>Player score</p>
