add code to inline image resizing

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         <div id="btndiv">
             <button type="button" id="next-game">Next Game</button>
         </div>
+        <img
+  srcset="assets/images/Test_Img1.png 50w, assets/images/Test_Img2.png 50w"
+  sizes="(max-width: 600px) 50px,
+         50px"
+  src="assets/images/Test_Img2.png"
+  alt="resizer test" />
     </div>
     
     <script src="assets/javascript/script.js"></script>
