refine resizer code for inline image

--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
         </div>
         <br>
         <picture>
-            <source media="(max-width: 799px)" srcset="assets/images/Test_Img1.png">
-            <source media="(min-width: 800px)" srcset="assets/images/Test_Img2.png">
-            <img src="assets/images/Test_Img2.png" alt="working resize test">
+            <source media="(max-width: 799px)" srcset="assets/images/Test_Img1.png" width="50" height="50">
+            <img src="assets/images/Test_Img2.png" alt="working resize test" width="100" height="100">
         </picture>
     </div>
     
