--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             <h1 id="name1">Title</h1>
             <br>
             <br>
-            <img src="assets/images/Test_Img1.png" alt="" srcset="" id="image1">
+            <picture>
+            <source media="(max-width: 799px)" srcset="assets/images/Test_Img1.png" width="50" height="50">
+            <img src="assets/images/Test_Img1.png" alt="working resize test" width="100" height="100" id="image1">
+            </picture>
             <br>
             <br>
             <br>
@@ -42,7 +45,7 @@
             <br>
             <picture>
             <source media="(max-width: 799px)" srcset="assets/images/Test_Img1.png" width="50" height="50">
-            <img src="assets/images/Test_Img1.png" alt="working resize test" width="100" height="100">
+            <img src="assets/images/Test_Img1.png" alt="working resize test" width="100" height="100" id="image2">
             </picture>
             <br>
             <br>
